# paradigm-data-portal

./: .gitignore  LICENSE-MIT  README.md  pyproject.toml
datasets/: README.md  global_manifest.json
datasets/ethereum_contracts/: README.md  dataset_manifest.json
datasets/ethereum_native_transfers/: README.md  dataset_manifest.json
datasets/ethereum_slots/: README.md  dataset_manifest.json
notebooks/: explore_ethereum_contracts.ipynb
pdp/: __init__.py  __main__.py  config_utils.py  dataset_utils.py  download_utils.py  file_utils.py  io_utils.py  manifest_utils.py  package_utils.py  query_utils.py  readme_utils.py  schema_utils.py  spec.py
pdp/cli/: cli_run.py
pdp/cli/commands/: collect_command.py  dataset_command.py  download_command.py  generate_command.py  ls_command.py  package_command.py  root_command.py  update_command.py  upload_command.py  validate_command.py
pdp/data_utils/: __init__.py  collect_utils.py  download_utils.py  file_utils.py  job_utils.py  manifest_utils.py  query_utils.py  readme_utils.py  schema_utils.py  update_utils.py
pdp/datasets/contracts/: __init__.py  contracts_collect.py  contracts_generate.py  contracts_queries.py  contracts_spec.py  generate_contracts_dataset.py
pdp/datasets/native_transfers/: __init__.py  generate_native_transfers_dataset.py  native_transfers_collect.py  native_transfers_generate.py  native_transfers_queries.py  (+1 more)
pdp/generate/: __init__.py  generate_contracts_dataset.py  generate_native_transfers_dataset.py  generate_slots_dataset.py  generate_utils.py
tests/: test_collect.py  test_validate.py
tests/remote_tests/: test_manifests.py
(+6 files in other folders)
