
[build-system]
requires = ["flit_core >=3.2, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "paradigm-data-portal"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    'typing-extensions >=4.2.0, <5',
    'requests >=2.20.0, <3',
    'toolcli >=0.6.13, <0.7',
    'toolstr >=0.9.3, <0.10',
    'tooljob >=0.1.6, <0.2',
]

[project.optional-dependencies]
test = [
    'mypy ==1.2.0',
    'mypy_extensions >= 1.0.0, <1.1.0',
    'pytest >=6, <7',
]

[project.scripts]
pdp = "pdp.cli.cli_run:run_cli"

[tool.flit.module]
name = "pdp"

[tool.mypy]
python_version = "3.9"
strict = true
implicit_reexport = true
files = ["pdp"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = 'auto'

